| Summary: | ASTERISK-29831: Queue don't play "thank-you" when here is no hold time announcements | ||
| Reporter: | Mark Petersen (asterisk.org@zombie.dk) | Labels: | |
| Date Opened: | 2022-01-04 03:10:01.000-0600 | Date Closed: | 2022-01-20 11:25:39.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | if holdtime is (0 min, 0 sec) there is no hold time announcements
we should then also not playing queue-thankyou | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-01-04 03:10:02.847-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-20 11:25:39.986-0600 Change 17781 merged by Friendly Automation: app_queue.c: Queue don't play "thank-you" when here is no hold time announcements [https://gerrit.asterisk.org/c/asterisk/+/17781|https://gerrit.asterisk.org/c/asterisk/+/17781] By: Friendly Automation (friendly-automation) 2022-01-20 11:25:44.426-0600 Change 17845 merged by Friendly Automation: app_queue.c: Queue don't play "thank-you" when here is no hold time announcements [https://gerrit.asterisk.org/c/asterisk/+/17845|https://gerrit.asterisk.org/c/asterisk/+/17845] By: Friendly Automation (friendly-automation) 2022-01-20 11:30:58.482-0600 Change 17846 merged by Friendly Automation: app_queue.c: Queue don't play "thank-you" when here is no hold time announcements [https://gerrit.asterisk.org/c/asterisk/+/17846|https://gerrit.asterisk.org/c/asterisk/+/17846] By: Friendly Automation (friendly-automation) 2022-01-20 11:49:55.404-0600 Change 17847 merged by Joshua Colp: app_queue.c: Queue don't play "thank-you" when here is no hold time announcements [https://gerrit.asterisk.org/c/asterisk/+/17847|https://gerrit.asterisk.org/c/asterisk/+/17847] | ||